--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,6 +2,12 @@
 
 <div class="dashboard-component">
   <div class="sidebar">
+    <a
+      routerLink="activitymanager"
+      routerLinkActive="active"
+      class="sidebar-menu-route"
+      >Activity</a
+    >
     <a routerLink="twitter" routerLinkActive="active" class="sidebar-menu-route"
       >Twitter</a
     >
