--- a/src/app/components/lending/lending.component.html
+++ b/src/app/components/lending/lending.component.html
@@ -19,5 +19,22 @@
   >
   <p>୧‿︵‿︵</p>
 </nav>
+<!-- <app-voice-input></app-voice-input>
+<app-checkbox
+  [checked]="false"
+  [checkboxId]="'customCheckbox' + 1"
+></app-checkbox>
+<app-checkbox
+  [checked]="false"
+  [checkboxId]="'customCheckbox' + 2"
+></app-checkbox>
+<app-checkbox
+  [checked]="false"
+  [checkboxId]="'customCheckbox' + 3"
+></app-checkbox>
+<app-checkbox
+  [checked]="false"
+  [checkboxId]="'customCheckbox' + 4"
+></app-checkbox> -->
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-notification></app-notification> -->
