--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,5 +1,6 @@
 <div class="notification-container">
-  <div c
+  <div
+    c
     *ngFor="let notification of notifications; let i = index"
     [@slideIn]
     class="notification"
@@ -8,7 +9,7 @@
   >
     <!-- <div class="gold-background"></div> -->
     <div class="notification-header">
-      Header
+      {{ notification.message_header }}
     </div>
     <div class="notification-body">
       <p>{{ notification.message }}</p>
