--- a/src/styles.sass
+++ b/src/styles.sass
@@ -60,6 +60,7 @@
 *::after
   padding: 0px
   margin: 0px
+  box-sizing: border-box
 
 body,html
   color: $font-color
@@ -73,7 +74,7 @@ body,html
     font-size: 16px
   a
     color: $font-color
-
+  
 body
   z-index: -3
   background: radial-gradient(ellipse at bottom, $background-secondary 0%, $background-primary 100%)
@@ -169,6 +170,28 @@ body
   &:active
     opacity: 0.5
 
+.datepicker
+  appearance: none
+  text-decoration: none
+  font-family: $input-font
+  width: 140px
+  height: 40px
+  min-height: 40px
+  color: $input-color
+  padding: 12px 14px
+  background-color: $input-background
+  outline: 0
+  border-radius: 6px
+  border: $input-border
+  display: inline-block
+  box-sizing: border-box
+  &:hover,
+  &:active
+    background-color: initial
+    background-position: 0 0
+    &:active
+      opacity: 0.5
+
 .select
   appearance: none
   text-decoration: none
@@ -206,6 +229,24 @@ body
     &:active
       outline: none
       box-shadow: none
+
+.textarea
+  width: fit-content
+  background-color: transparent
+  color: white
+  min-width: 300px
+  min-height: 100px
+  padding: 10px
+        // padding: 5px
+  border: 1px solid #837260
+  transition: border-color 0.3s, box-shadow 0.3s
+
+  // Тінь для тексту, щоб виглядало об'ємніше
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1)
+  &:active,
+  &:focus
+    outline: none
+    box-shadow: none
 
 @function multiple-box-shadow ($n)
   $value: '#{random(2560)}px #{random(2560)}px #be605c'
