--- a/src/app/components/web3/sub-menu/arcade/arcade-overview/arcade-overview.component.html
+++ b/src/app/components/web3/sub-menu/arcade/arcade-overview/arcade-overview.component.html
@@ -1,7 +1,22 @@
 <div class="arcade-overview-component">
-    <!-- <div class="activity-overview-component_header">Header</div> -->
-    <div class="treasure-overview-component_article-content markdown-container">
+  <div class="arcade-overview-component_links">
+    <div class="arcade-overview-component_links_header-block">
+      <p class="arcade-overview-component_links_header">Links from post</p>
+      <p class="arcade-overview-component_links_header">Click to copy</p>
+    </div>
+    <ol class="ol">
+      @for (link of links; track $index) {
+      <li (click)="copyLink(link)" class="li">
+        <div class="list-index">{{ $index + 1 }}</div>
+        <p>{{ link }}</p>
+      </li>
+      }
+    </ol>
+  </div>
+  <!-- <div class="activity-overview-component_header">Header</div> -->
+  <div class="arcade-overview-component_article-content_block">
+    <div class="arcade-overview-component_article-content markdown-container">
       <markdown [data]="article_content"></markdown>
     </div>
   </div>
-  
+</div>
