--- a/src/app/components/web3/sub-menu/treasure/treasure-overview/treasure-overview.component.html
+++ b/src/app/components/web3/sub-menu/treasure/treasure-overview/treasure-overview.component.html
@@ -1,6 +1,22 @@
 <div class="treasure-overview-component">
+  <div class="treasure-overview-component_links">
+    <div class="treasure-overview-component_links_header-block">
+      <p class="treasure-overview-component_links_header">Links from post</p>
+      <p class="treasure-overview-component_links_header">Click to copy</p>
+    </div>
+    <ol class="ol">
+      @for (link of links; track $index) {
+      <li (click)="copyLink(link)" class="li">
+        <div class="list-index">{{ $index + 1 }}</div>
+        <p>{{ link }}</p>
+      </li>
+      }
+    </ol>
+  </div>
   <!-- <div class="activity-overview-component_header">Header</div> -->
-  <div class="treasure-overview-component_article-content markdown-container">
-    <markdown [data]="article_content"></markdown>
+  <div class="treasure-overview-component_article-content_block">
+    <div class="treasure-overview-component_article-content markdown-container">
+      <markdown [data]="article_content"></markdown>
+    </div>
   </div>
 </div>
