--- a/src/app/components/web3/sub-menu/treasure/treasure-overview/treasure-overview.component.sass
+++ b/src/app/components/web3/sub-menu/treasure/treasure-overview/treasure-overview.component.sass
@@ -2,6 +2,43 @@
     width: 100%
     height: 100%
     display: flex
-    justify-content: center
+
+    .treasure-overview-component_links
+        display: flex
+        flex-direction: column
+        padding: 5px 0 0 20px
+        width: 15%
+        overflow: auto
+        flex-wrap: nowrap
+
+        .treasure-overview-component_links_header-block
+            display: flex
+            flex-direction: column
+
+            .treasure-overview-component_links_header
+                font-size: 20px
+        ol
+            display: flex
+            flex-direction: column
+            width: 100%
+            li
+                display: flex
+                gap: 10px
+                .list-index
+                    display: inline-block
+                    box-sizing: border-box
+                    text-align: center
+                    line-height: inherit
+                    text-rendering: geometricprecision
+                    text-transform: none
+
+    .treasure-overview-component_article-content_block
+        display: flex
+        justify-content: center
+        width: 85%
 
     .treasure-overview-component_article-content
+        display: flex
+        justify-content: center
+        width: 100%
+        height: 100%
