--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
   <a class="navbar_route" routerLink="accounts" routerLinkActive="active"
     >Accounts</a
   >
-  <a class="navbar_route" routerLink="items" routerLinkActive="active">Items</a>
+  <a class="navbar_route" routerLink="steam" routerLinkActive="active">Steam</a>
   <a class="navbar_route" routerLink="dashboard" routerLinkActive="active"
     >Dash</a
   >
