--- a/src/app/components/lending/lending.component.html
+++ b/src/app/components/lending/lending.component.html
@@ -7,8 +7,8 @@
   <a class="navbar_route" routerLink="v1/accounts" routerLinkActive="active"
     >Accounts</a
   >
-  <a class="navbar_route" routerLink="v1/items" routerLinkActive="active"
-    >Items</a
+  <a class="navbar_route" routerLink="v1/steam" routerLinkActive="active"
+    >Steam</a
   >
   <img class="logo" src="../../../assets/images/logo.png" />
   <a class="navbar_route" routerLink="v1/dashboard" routerLinkActive="active"
